# apify-hackathon

./: .gitignore  Agents.md  Dockerfile  EXAMPLE_OUTPUT.json  README.md  USAGE.md  crime_statistics.json  demo_workflow.py  extract_crime_stats.py  prague_districts_mapping.json  pyproject.toml  requirements.txt  scraped_listings.csv
.actor/: actor.json  dataset_schema.json  input_schema.json  output_schema.json
crimes/2025_500054/: 2025_500054.csv
crimes/2025_500089/: 2025_500089.csv
crimes/2025_500097/: 2025_500097.csv
crimes/2025_500143/: 2025_500143.csv
crimes/2025_500178/: 2025_500178.csv
crimes/2025_500186/: 2025_500186.csv
crimes/2025_500208/: 2025_500208.csv
crimes/2025_500216/: 2025_500216.csv  states.csv
crimes/2025_500224/: 2025_500224.csv
src/: consistency_checker.py  kebab_index.py  llm_service.py  main.py  mock_data.py  models.py  prague_districts.py  prague_real_estate_data.py  scraper_service.py  test_openrouter_llm.py  utils.py
tests/: __init__.py  conftest.py  test_llm_service.py  test_mock_data.py
